# accounting_tool

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
.claude/agents/: backend-builder.md  code-builder.md  ui-builder.md
.claude/rules/: backend.md  database.md  ui.md
backend/: CLAUDE.md  Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260528_000001_create_finance_type.rs  m20260608_000002_create_classification.rs  m20260608_000003_create_accounts.rs
backend/src/: main.rs  main_backup.txt  statistics.rs
backend/src/entities/: accounts.rs  classification.rs  mod.rs  prelude.rs
database/: create_table.sql  db.sql  init_classification.csv
ui/: CLAUDE.md  package-lock.json  package.json
ui/src/: App.tsx
ui/src/pages/: AddClassificationType.tsx  Home.tsx  TransactionList.tsx
ui/src/types/: index.ts
