[package]
name = "accounting_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
chrono = "0.4"
rust_decimal = "1.33"
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-native-tls"] }

[dependencies.migration]
path = "./migration"
